@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>0.4</version>
+  <version>2</version>
 </metadata>
