@@ -1,3 +1,0 @@
-[egg_info]
-tag_build = dev
-tag_svn_revision = true
